--- a/monsters-service/src/main/resources/application.properties
+++ b/monsters-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=dungeon
+spring.application.name=dungeongame
 monsters.assets.path=src/main/resources/assets/monsters/
 server.address=0.0.0.0
 server.port=8080
