--- a/heroes-service/src/main/resources/application.properties
+++ b/heroes-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8080
 
-
 spring.jpa.open-in-view=false
 
 spring.application.name=heroes-service
@@ -8,13 +7,13 @@ app.images.head-dir=assets/head
 app.images.body-dir=assets/body
 app.images.hero-dir=assets/hero
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/dungeon_game_heroes
+spring.datasource.url=jdbc:postgresql://db-heroes:5432/dungeon_game_heroes
 spring.datasource.username=dungeon_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.initialization-mode=always
