--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,31 @@ services:
   dungeon-game-service-users:
     build:
       context: ./users-service
-      dockerfile: Dockerfile
     container_name: dungeon-game-service-users
+    restart: always
     ports:
       - '8081:8080'
     depends_on:
+      - dungeon-game-rabbitmq
       - db-users
     networks:
       - dungeon-game
 
-  rabbitmq:
+  dungeon-game-service-fight:
+    build:
+      context: ./fight-service
+    restart: always
+    container_name: dungeon-game-service-fight
+    ports:
+      - '8082:8080'
+    depends_on:
+      - dungeon-game-rabbitmq
+    networks:
+      - dungeon-game
+
+  dungeon-game-rabbitmq:
     image: rabbitmq:3.9-management
+    restart: always
     ports:
       - '5672:5672'
       - '15672:15672'
