--- a/heroes-service/src/main/resources/application.properties
+++ b/heroes-service/src/main/resources/application.properties
@@ -7,9 +7,9 @@ app.images.head-dir=assets/head
 app.images.body-dir=assets/body
 app.images.hero-dir=assets/hero
 
-spring.datasource.url=jdbc:postgresql://db-heroes:5432/dungeon_game_heroes
-spring.datasource.username=dungeon_user
-spring.datasource.password=password
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate JPA Configuration
