--- a/heroes-service/src/main/resources/application.properties
+++ b/heroes-service/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.default_batch_fetch_size=10
+
+# Configuration RabbitMQ
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
