--- a/frontend-service/app/package.json
+++ b/frontend-service/app/package.json
@@ -12,14 +12,18 @@
     "framer-motion": "^12.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4",
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "PORT=8080 DISABLE_ESLINT_PLUGIN=true WATCHPACK_POLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
