--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -1,6 +1,8 @@
 {
     "dependencies": {
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-multi-carousel": "^2.8.2",
+        "swiper": "^11.2.1"
     }
 }
