Création du héro

--- a/.env-example
+++ b/.env-example
@@ -25,7 +25,8 @@ SERVICE_HEROES_SPRING_DATASOURCE_PASSWORD=
 SERVICE_HEROES_PORT=8083
 
 SERVICE_DUNGEON_PORT=8084
-SERVICE_DUNGEON_HOST=localhost
+
+SERVICE_HOST=localhost
 
 SPRING_RABBITMQ_SEND_PORT=5672
 SPRING_RABBITMQ_VIEW_PORT=15672
