--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,8 @@ services:
       - SPRING_DATASOURCE_URL=${SERVICE_HEROES_SPRING_DATASOURCE_URL}
       - SPRING_DATASOURCE_USERNAME=${SERVICE_HEROES_SPRING_DATASOURCE_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${SERVICE_HEROES_SPRING_DATASOURCE_PASSWORD}
+      - SERVICE_HEROES_PORT=${SERVICE_HEROES_PORT}
+      - SERVICE_HEROES_HOST=${SERVICE_HOST}
     ports:
       - "${SERVICE_HEROES_PORT}:8080"
     depends_on:
@@ -101,7 +103,7 @@ services:
     container_name: dungeon-game-dungeon-service
     environment:  
       - SERVICE_DUNGEON_PORT=${SERVICE_DUNGEON_PORT}
-      - SERVICE_DUNGEON_HOST=${SERVICE_DUNGEON_HOST}
+      - SERVICE_DUNGEON_HOST=${SERVICE_HOST}
     ports:
       - "${SERVICE_DUNGEON_PORT}:3000"
     volumes:
