--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Configuration du service
 spring.application.name=users-services
 
-# Connexion Ã  la base de donnÃ©es PostgreSQL
+# Connexion à la base de données PostgreSQL
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate (JPA) propriÃ©tÃ©s
+# Hibernate (JPA) propriétés
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
