--- a/fights-service/src/main/resources/application.properties
+++ b/fights-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=fight-service
+spring.application.name=fights-service
 
 # Configuration RabbitMQ
 spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
