--- a/frontend-service/app/package.json
+++ b/frontend-service/app/package.json
@@ -25,7 +25,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-    "start": "PORT=8080 DISABLE_ESLINT_PLUGIN=true WATCHPACK_POLLING=true react-scripts start",
+    "start": "DISABLE_ESLINT_PLUGIN=true WATCHPACK_POLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
