--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -5,6 +5,7 @@
         "react-dom": "^18.3.1",
         "react-icons": "^5.4.0",
         "react-multi-carousel": "^2.8.2",
+        "socket.io-client": "^4.8.1",
         "swiper": "^11.2.1"
     }
 }
