--- a/frontend-service/app/package.json
+++ b/frontend-service/app/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
