--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.4.0",
         "react-multi-carousel": "^2.8.2",
         "swiper": "^11.2.1"
     }
