Test RabbitMQ between users/heroes and frontend

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
-DB_USER_POSTGRES_DB=dungeon_game_users
-DB_USER_POSTGRES_USER=
-DB_USER_POSTGRES_PASSWORD=
-DB_USER_PORT=5432
+DB_USERS_POSTGRES_DB=dungeon_game_users
+DB_USERS_POSTGRES_USER=
+DB_USERS_POSTGRES_PASSWORD=
+DB_USERS_PORT=5432
 
 DB_HEROES_POSTGRES_DB=dungeon_game_heroes
 DB_HEROES_POSTGRES_USER=
