Fix - monsters service - Added sprites monsters

--- a/monsters-service/Dockerfile
+++ b/monsters-service/Dockerfile
@@ -1,25 +1,11 @@
-# Stage 1: Build
 FROM maven:3.9.9-eclipse-temurin-17-alpine AS builder
 
 WORKDIR /app
 
-COPY pom.xml .
-COPY .mvn .mvn
-COPY mvnw .
-COPY mvnw.cmd .
+COPY . .
 
-RUN mvn dependency:go-offline
+RUN mvn install -DskipTests
 
-COPY src src
-RUN mvn clean package -DskipTests
+EXPOSE 8085
 
-# Stage 2: Run
-FROM eclipse-temurin:17-jre-alpine
-
-WORKDIR /app
-COPY --from=builder /app/target/*.jar app.jar
-COPY src/main/resources/assets /app/src/main/resources/assets
-
-EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["mvn", "spring-boot:run", "-DskipTests"]
