--- a/frontend-service/app/package.json
+++ b/frontend-service/app/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.3",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
