--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "react": "^18.3.1",
+        "react-confetti": "^6.2.2",
         "react-dom": "^18.3.1",
         "react-icons": "^5.4.0",
         "react-multi-carousel": "^2.8.2",
