--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,7 @@ services:
       - "${SERVICE_MONSTERS_PORT}:8080"
     networks:
       - dungeon-game-network
+    restart: always
 
   dungeon-game-rabbitmq-service:
     image: rabbitmq:3.9-management
